Fixed overflow issue on view tabs

--- a/src/app/components/view-aisle/view-aisle.component.css
+++ b/src/app/components/view-aisle/view-aisle.component.css
@@ -23,6 +23,24 @@
 	overflow-y:auto;
 }
 
+
+.aisles-body::-webkit-scrollbar
+{
+	width:4px;
+	background:rgba(0,0,0,0.05);
+}
+
+.aisles-body::-webkit-scrollbar-thumb
+{
+	background:rgba(0,0,0,0.25);
+}
+
+.aisles-body::-webkit-scrollbar-track
+{
+	background:rgba(0,0,0,0.01);
+}
+
+
 .aisle-name
 {
 	font-size:1.25em;
