--- a/src/app/components/view-stewards/view-stewards.component.css
+++ b/src/app/components/view-stewards/view-stewards.component.css
@@ -16,6 +16,29 @@
 	background:rgba(0,0,0,0.1);
 }
 
+.stewards-body
+{
+	max-height:60vh;
+	overflow-y:auto;
+}
+
+
+.stewards-body::-webkit-scrollbar
+{
+	width:4px;
+	background:rgba(0,0,0,0.05);
+}
+
+.stewards-body::-webkit-scrollbar-thumb
+{
+	background:rgba(0,0,0,0.25);
+}
+
+.stewards-body::-webkit-scrollbar-track
+{
+	background:rgba(0,0,0,0.01);
+}
+
 .circle
 {
 	width:30px;
